--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -5,7 +5,7 @@
         {
             "start-date": "2022-10-27 00:00:00",
             "expiration-date": "",
-            "title": "2022-10-28",
+            "title": "Element messages updated",
             "message": "Change the title of this element to trigger in-app update",
             "priority": 0,
             "user-levels": [],
@@ -46,7 +46,7 @@
             "start-date": "2022-10-26 00:00:00",
             "expiration-date": "",
             "title": "Developer Support Options",
-            "message": "Developer support options can be found on our humble website",
+            "message": "Developer support options can be found on our humble website. Tap here to view!",
             "priority": 9,
             "user-levels": [
                 "developer",
@@ -63,7 +63,7 @@
             "start-date": "2022-10-14 00:00:00",
             "expiration-date": "2022-12-31",
             "title": "iOS GoFundMe",
-            "message": "Help with funding for development of an iOS version of US Congress app. Click here or contact us for details",
+            "message": "Help with funding for development of an iOS version of US Congress app. Tap here or contact us for details",
             "priority": 8,
             "user-levels": [
                 "developer",
@@ -146,7 +146,7 @@
             "start-date": "2022-10-14 00:00:00",
             "expiration-date": "",
             "title": "Enjoying The App?",
-            "message": "Let us know how we're doing, and if there is something we can improve on.",
+            "message": "Let us know how we're doing, and if there is something we can improve on. Tap here to give us a rating!",
             "priority": 4,
             "user-levels": [
                 "developer",
