new has words added

--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -225,7 +225,7 @@
         "commercial",
         "commodities",
         "corruption",
-        "coupon",
+        "coupon","crime",
         "Crypto",
         "Cryptocurrency",
         "Cyber Security",
@@ -319,7 +319,7 @@
         "power",
         "Palestine",
         "Pelosi",
-        "pharmaceutical",
+        "pharmaceutical","police",
         "poor",
         "President",
         "Press Secretary",
