--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -2,6 +2,7 @@
     "app": "us-congress",
     "congress": 117,
     "status": "OK",
+    "updated": "2022-11-04",
     "notifications": [
         {
             "start-date": "2022-10-27 00:00:00",
