Midterm vote promo added

--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -6,7 +6,7 @@
             "start-date": "2022-10-27 00:00:00",
             "expiration-date": "",
             "title": "Element messages updated",
-            "message": "Change the title of this element to force in-app update",
+            "message": "Change this title element to force in-app update",
             "priority": 0,
             "user-levels": [],
             "url": "",
