changeed support option to false for 'Make your vote count' item

--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -30,7 +30,7 @@
             ],
             "url": "",
             "icon": "campaign",
-            "support-option": true,
+            "support-option": false,
             "additional-data": "vote"
         },
         {
