--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -5,7 +5,7 @@
         {
             "start-date": "2022-10-27 00:00:00",
             "expiration-date": "",
-            "title": "Just a Hello World",
+            "title": "Hello World",
             "message": "Since you ARE MettaCode. Just sending a test",
             "priority": 10,
             "user-levels": [
@@ -37,7 +37,7 @@
             "start-date": "2022-10-26 00:00:00",
             "expiration-date": "",
             "title": "Developer Support Options",
-            "message": "Developer support options can be found on our humble website. Tap here to view!",
+            "message": "Developer support options can be found on our humble website.\nTap here to view!",
             "priority": 9,
             "user-levels": [
                 "developer",
@@ -54,7 +54,7 @@
             "start-date": "2022-10-14 00:00:00",
             "expiration-date": "",
             "title": "iOS GoFundMe",
-            "message": "Help with funding for development of an iOS version of US Congress app. Tap here or contact us for details",
+            "message": "Help with funding for development of our iOS version of US Congress app.\nTap here or contact us for details",
             "priority": 8,
             "user-levels": [
                 "developer",
