--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -3,6 +3,20 @@
     "status": "OK",
     "notifications": [
         {
+            "start-date": "2022-11-15 00:00:00",
+            "expiration-date": "",
+            "title": "Test Message",
+            "message": "Developer test for recent bug fix",
+            "priority": 1,
+            "user-levels": [
+                "developer"
+            ],
+            "url": "",
+            "icon": "",
+            "support-option": false,
+            "additional-data": "test"
+        },
+        {
             "start-date": "2022-11-06 00:00:00",
             "expiration-date": "2022-11-08 00:00:00",
             "title": "Make your vote count",
