support status updated

--- a/usc-app-data.json
+++ b/usc-app-data.json
@@ -83,7 +83,7 @@
             ],
             "url": "",
             "icon": "coins",
-            "support-option": true,
+            "support-option": false,
             "additional-data": "credits"
         },
         {
