--- a/cw-app-data.json
+++ b/cw-app-data.json
@@ -3,6 +3,27 @@
     "status": "OK",
     "notifications": [
         {
+            "start-date": "2023-01-08 00:00:00",
+            "expiration-date": "2023-03-01 00:00:00",
+            "title": "Congress In Transition",
+            "message": "Due to the House of Representatives transition from the 117th to 118th Congress. Some portions of the app may take some time to update or begin showing data for particular members as congressional sessions begin to move forward. This is normal app operation during congressional transition periods.",
+            "priority": 0,
+            "user-levels": [
+                "developer",
+                "premium",
+                "legacy",
+                "free"
+            ],
+            "market": [
+                "world"
+            ],
+            "url": "",
+            "icon": "",
+            "support-option": false,
+            "load-option": true,
+            "additional-data": "alert"
+        },
+        {
             "start-date": "2022-11-06 00:00:00",
             "expiration-date": "2022-11-08 00:00:00",
             "title": "Make your vote count",
@@ -20,6 +41,7 @@
             "url": "",
             "icon": "campaign",
             "support-option": false,
+            "load-option": true,
             "additional-data": "vote"
         },
         {
@@ -40,6 +62,7 @@
             "url": "",
             "icon": "handshake",
             "support-option": true,
+            "load-option": true,
             "additional-data": "share"
         },
         {
@@ -59,6 +82,7 @@
             "url": "",
             "icon": "",
             "support-option": false,
+            "load-option": true,
             "additional-data": "usage"
         },
         {
@@ -79,6 +103,7 @@
             "url": "",
             "icon": "coins",
             "support-option": true,
+            "load-option": true,
             "additional-data": "credits"
         },
         {
@@ -99,6 +124,7 @@
             "url": "",
             "icon": "coins",
             "support-option": false,
+            "load-option": true,
             "additional-data": "credits"
         },
         {
@@ -119,6 +145,7 @@
             "url": "",
             "icon": "store",
             "support-option": false,
+            "load-option": true,
             "additional-data": "shop"
         },
         {
@@ -136,16 +163,17 @@
             "market": [
                 "world"
             ],
-            "url": "https://play.google.com/store/apps/details?id=com.watchtower.usa",
+            "url": "",
             "icon": "star",
             "support-option": true,
+            "load-option": true,
             "additional-data": "rating"
         },
         {
             "start-date": "2022-10-14 00:00:00",
             "expiration-date": "2022-10-19 00:00:00",
             "title": "Ready For Premium Status?",
-            "message": "Our Free Premium Days promotion run the first week of every month where you can try out all app features!",
+            "message": "Our Free Premium Days promotion runs the first week of every month where you can try out all app features!",
             "priority": 5,
             "user-levels": [
                 "developer",
@@ -158,6 +186,7 @@
             "url": "",
             "icon": "workspace-premium",
             "support-option": false,
+            "load-option": true,
             "additional-data": "upgrade"
         },
         {
@@ -177,6 +206,7 @@
             "url": "",
             "icon": "trending-up",
             "support-option": false,
+            "load-option": true,
             "additional-data": "market"
         },
         {
@@ -197,6 +227,7 @@
             "url": "",
             "icon": "notifications",
             "support-option": false,
+            "load-option": true,
             "additional-data": "notifications"
         },
         {
@@ -217,6 +248,7 @@
             "url": "https://gofund.me/4e761be9",
             "icon": "campaign",
             "support-option": true,
+            "load-option": true,
             "additional-data": "gofundme"
         },
         {
@@ -237,6 +269,7 @@
             "url": "https://mettacode.dev",
             "icon": "volunteer-activism",
             "support-option": true,
+            "load-option": true,
             "additional-data": "support"
         },
         {
@@ -252,6 +285,7 @@
             "url": "https://mettacode.dev",
             "icon": "developer-board",
             "support-option": false,
+            "load-option": true,
             "additional-data": "test"
         }
     ]
