--- a/cw-app-data.json
+++ b/cw-app-data.json
@@ -6,7 +6,7 @@
             "start-date": "2023-01-08 00:00:00",
             "expiration-date": "2023-03-01 00:00:00",
             "title": "Congress In Transition",
-            "message": "Due to the Congressional transition from the 117th to 118th Congress. Some portions of the app may take some time to update or begin showing data for particular members as new sessions begin to move forward. This is normal app operation during congressional transition periods.",
+            "message": "Due to the Congressional transition from the 117th to 118th Congress. Some areas of the app may take some time to update or begin showing data. As new sessions begin, all areas will return.",
             "priority": 0,
             "user-levels": [
                 "developer",
@@ -21,6 +21,7 @@
             "icon": "",
             "support-option": false,
             "load-option": true,
+            "isAlert": true,
             "additional-data": "alert"
         },
         {
@@ -42,6 +43,7 @@
             "icon": "campaign",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "vote"
         },
         {
@@ -63,6 +65,7 @@
             "icon": "handshake",
             "support-option": true,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "share"
         },
         {
@@ -83,6 +86,7 @@
             "icon": "",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "usage"
         },
         {
@@ -104,6 +108,7 @@
             "icon": "coins",
             "support-option": true,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "credits"
         },
         {
@@ -125,6 +130,7 @@
             "icon": "coins",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "credits"
         },
         {
@@ -146,6 +152,7 @@
             "icon": "store",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "shop"
         },
         {
@@ -167,6 +174,7 @@
             "icon": "star",
             "support-option": true,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "rating"
         },
         {
@@ -187,6 +195,7 @@
             "icon": "workspace-premium",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "upgrade"
         },
         {
@@ -207,6 +216,7 @@
             "icon": "trending-up",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "market"
         },
         {
@@ -228,6 +238,7 @@
             "icon": "notifications",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "notifications"
         },
         {
@@ -249,6 +260,7 @@
             "icon": "campaign",
             "support-option": true,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "gofundme"
         },
         {
@@ -270,6 +282,7 @@
             "icon": "volunteer-activism",
             "support-option": true,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "support"
         },
         {
@@ -286,6 +299,7 @@
             "icon": "developer-board",
             "support-option": false,
             "load-option": true,
+            "isAlert": false,
             "additional-data": "test"
         }
     ]
